# peterschutt.github.io

./: .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  pyproject.toml
dad/: index.html
docs/: CNAME  index.md
docs/programmer/: poetry-pip-and-setuptools.md
home/: index.html
husband/: index.html
outdoors/: index.html
programmer/: index.html
programmer/poetry-pip-and-setuptools/: index.html
search/: search_index.json
