[tool.poetry]
name = "peterschutt.github.io"
version = "0.1.0"
description = "Me, coding."
authors = ["Peter Schutt <peter.github@proton.me>"]

[tool.poetry.dependencies]
python = "^3.10"
mkdocs-material = "^8.3.9"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
